// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`KlachtenDetail > No subject or location > Matches the Full Page snapshot 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _DetailPage_47d7c0"
  >
    <header
      class="_PageHeading_3b337d _hasIcon_3b337d _hasBackLink_3b337d"
    >
      <span
        aria-hidden="true"
        class="_Icon_3b337d"
      >
        <svg
          aria-label="Klachten"
          class="_ChapterIcon_3ea2dd"
          fill="black"
          height="32px"
          viewBox="0 0 32 32"
          width="32px"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <g
            fill-rule="evenodd"
            stroke="none"
            stroke-width="1"
          >
            <path
              d="M29,2 L29,22 L20,22 L20,30 L12.004178,22 L3,22 L3,2 L29,2 Z M16,5 C15.4466667,5 15,5.43459459 15,5.97297297 L15,7 C12.8961906,7 11,8.82702703 11,11 L11,14.8918919 L10,16 L10,17 L15,17 C15,17.5527638 15.4472362,18 16,18 C16.5527638,18 17,17.5527638 17,17 L22,17 L22,16 L21,15.0540541 L21,11 C21,8.82702703 18.984787,7 17,7 L17,5.97297297 C17,5.43459459 16.5533333,5 16,5 Z"
            />
          </g>
        </svg>
      </span>
      <div
        class="_HeadingInner_3b337d"
      >
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _BackLink_3b337d"
          href="/klachten/1"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-links-icoon
            </title>
            <polygon
              points="22.8571429 32 6.85714286 16 22.8571429 0 25.7568858 2.91002571 12.6771943 16 25.7568858 29.0899743"
            />
          </svg>
          Klachten
        </a>
        <h2
          class="ams-heading ams-heading--1"
        >
          Klacht
        </h2>
      </div>
    </header>
    <div
      class="_PageContent_47d7c0"
    >
      <div
        class="_InfoDetail_6f1df2"
      >
        <h3
          class="ams-heading ams-heading--4 _Label_6f1df2"
        >
          Nummer van uw klacht
        </h3>
        <p
          class="_Value_6f1df2"
        >
          36046
        </p>
      </div>
      <div
        class="_InfoDetail_6f1df2"
      >
        <h3
          class="ams-heading ams-heading--4 _Label_6f1df2"
        >
          Ontvangen op
        </h3>
        <p
          class="_Value_6f1df2"
        >
          05 mei 2022
        </p>
      </div>
      <div
        class="_InfoDetail_6f1df2"
      >
        <h3
          class="ams-heading ams-heading--4 _Label_6f1df2"
        >
          Wat is de klacht?
        </h3>
        <p
          class="_Value_6f1df2"
        >
          Dear Amsterdam Municipality
        </p>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`KlachtenDetail > Subject and location > Matches the Full Page snapshot 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _DetailPage_47d7c0"
  >
    <header
      class="_PageHeading_3b337d _hasIcon_3b337d _hasBackLink_3b337d"
    >
      <span
        aria-hidden="true"
        class="_Icon_3b337d"
      >
        <svg
          aria-label="Klachten"
          class="_ChapterIcon_3ea2dd"
          fill="black"
          height="32px"
          viewBox="0 0 32 32"
          width="32px"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <g
            fill-rule="evenodd"
            stroke="none"
            stroke-width="1"
          >
            <path
              d="M29,2 L29,22 L20,22 L20,30 L12.004178,22 L3,22 L3,2 L29,2 Z M16,5 C15.4466667,5 15,5.43459459 15,5.97297297 L15,7 C12.8961906,7 11,8.82702703 11,11 L11,14.8918919 L10,16 L10,17 L15,17 C15,17.5527638 15.4472362,18 16,18 C16.5527638,18 17,17.5527638 17,17 L22,17 L22,16 L21,15.0540541 L21,11 C21,8.82702703 18.984787,7 17,7 L17,5.97297297 C17,5.43459459 16.5533333,5 16,5 Z"
            />
          </g>
        </svg>
      </span>
      <div
        class="_HeadingInner_3b337d"
      >
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _BackLink_3b337d"
          href="/klachten/1"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-links-icoon
            </title>
            <polygon
              points="22.8571429 32 6.85714286 16 22.8571429 0 25.7568858 2.91002571 12.6771943 16 25.7568858 29.0899743"
            />
          </svg>
          Klachten
        </a>
        <h2
          class="ams-heading ams-heading--1"
        >
          Boosterprik
        </h2>
      </div>
    </header>
    <div
      class="_PageContent_47d7c0"
    >
      <div
        class="_InfoDetail_6f1df2"
      >
        <h3
          class="ams-heading ams-heading--4 _Label_6f1df2"
        >
          Nummer van uw klacht
        </h3>
        <p
          class="_Value_6f1df2"
        >
          34994
        </p>
      </div>
      <div
        class="_InfoDetail_6f1df2"
      >
        <h3
          class="ams-heading ams-heading--4 _Label_6f1df2"
        >
          Ontvangen op
        </h3>
        <p
          class="_Value_6f1df2"
        >
          13 april 2022
        </p>
      </div>
      <div
        class="_InfoDetail_6f1df2"
      >
        <h3
          class="ams-heading ams-heading--4 _Label_6f1df2"
        >
          Wat is de klacht?
        </h3>
        <p
          class="_Value_6f1df2"
        >
          Een klacht.
        </p>
      </div>
      <div
        class="_InfoDetail_6f1df2"
      >
        <h3
          class="ams-heading ams-heading--4 _Label_6f1df2"
        >
          Wat is de locatie waar de klacht is ontstaan?
        </h3>
        <p
          class="_Value_6f1df2"
        >
          RAI
        </p>
      </div>
      <div
        class="_InfoDetail_6f1df2"
      >
        <h3
          class="ams-heading ams-heading--4 _Label_6f1df2"
        >
          Wat wilt u dat de gemeente gaat doen naar aanleiding van uw klacht?
        </h3>
        <p
          class="_Value_6f1df2"
        >
          Boosterprik
        </p>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`KlachtenDetail > Subject no location > Matches the Full Page snapshot 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _DetailPage_47d7c0"
  >
    <header
      class="_PageHeading_3b337d _hasIcon_3b337d _hasBackLink_3b337d"
    >
      <span
        aria-hidden="true"
        class="_Icon_3b337d"
      >
        <svg
          aria-label="Klachten"
          class="_ChapterIcon_3ea2dd"
          fill="black"
          height="32px"
          viewBox="0 0 32 32"
          width="32px"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <g
            fill-rule="evenodd"
            stroke="none"
            stroke-width="1"
          >
            <path
              d="M29,2 L29,22 L20,22 L20,30 L12.004178,22 L3,22 L3,2 L29,2 Z M16,5 C15.4466667,5 15,5.43459459 15,5.97297297 L15,7 C12.8961906,7 11,8.82702703 11,11 L11,14.8918919 L10,16 L10,17 L15,17 C15,17.5527638 15.4472362,18 16,18 C16.5527638,18 17,17.5527638 17,17 L22,17 L22,16 L21,15.0540541 L21,11 C21,8.82702703 18.984787,7 17,7 L17,5.97297297 C17,5.43459459 16.5533333,5 16,5 Z"
            />
          </g>
        </svg>
      </span>
      <div
        class="_HeadingInner_3b337d"
      >
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _BackLink_3b337d"
          href="/klachten/1"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-links-icoon
            </title>
            <polygon
              points="22.8571429 32 6.85714286 16 22.8571429 0 25.7568858 2.91002571 12.6771943 16 25.7568858 29.0899743"
            />
          </svg>
          Klachten
        </a>
        <h2
          class="ams-heading ams-heading--1"
        >
          Test voor decentrale toewijzing
        </h2>
      </div>
    </header>
    <div
      class="_PageContent_47d7c0"
    >
      <div
        class="_InfoDetail_6f1df2"
      >
        <h3
          class="ams-heading ams-heading--4 _Label_6f1df2"
        >
          Nummer van uw klacht
        </h3>
        <p
          class="_Value_6f1df2"
        >
          36049
        </p>
      </div>
      <div
        class="_InfoDetail_6f1df2"
      >
        <h3
          class="ams-heading ams-heading--4 _Label_6f1df2"
        >
          Ontvangen op
        </h3>
        <p
          class="_Value_6f1df2"
        >
          30 mei 2022
        </p>
      </div>
      <div
        class="_InfoDetail_6f1df2"
      >
        <h3
          class="ams-heading ams-heading--4 _Label_6f1df2"
        >
          Wat is de klacht?
        </h3>
        <p
          class="_Value_6f1df2"
        >
          Dit is de omschrijving van de klacht
        </p>
      </div>
    </div>
  </main>
</DocumentFragment>
`;
